[gd_scene load_steps=4 format=3 uid="uid://deiv7y137mng8"]

[ext_resource type="Script" path="res://scripts/death.gd" id="1_42d4r"]
[ext_resource type="AudioStream" uid="uid://cwl5vv04hyfkn" path="res://assets/audio/sounds/death1.mp3" id="2_ncw0s"]
[ext_resource type="AudioStream" uid="uid://ctbpbgweojlny" path="res://assets/audio/sounds/Death3.mp3" id="3_upkjn"]

[node name="Death" type="Node2D"]
script = ExtResource("1_42d4r")

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ncw0s")
max_distance = 100.0

[node name="Death2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ncw0s")
max_distance = 100.0

[node name="Death3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_upkjn")
volume_db = 15.0
max_distance = 100.0

[connection signal="finished" from="Death" to="." method="_on_death_finished"]
[connection signal="finished" from="Death2" to="." method="_on_death_finished"]
[connection signal="finished" from="Death3" to="." method="_on_death_finished"]
